--- a/SenaiApp/Modulo/WindowsForms/WindowsForms.csproj
+++ b/SenaiApp/Modulo/WindowsForms/WindowsForms.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EC714E93-8A6F-4B2A-A804-F8442D00F293}</ProjectGuid>
+    <ProjectGuid>{8220ADF9-743B-43DC-A091-1DE70AF6A3A3}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>SenaiApp.Modulo.Windows</RootNamespace>
-    <AssemblyName>SenaiApp.Modulo.Windows</AssemblyName>
+    <RootNamespace>WindowsForms</RootNamespace>
+    <AssemblyName>WindowsForms</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,11 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Principal.cs">
+    <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Principal.Designer.cs">
-      <DependentUpon>Principal.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
